--- a/PierreSweets/appsettings.json
+++ b/PierreSweets/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Port=3306;database=wajma_niazi;uid=root;pwd=epicodus;"
+    "DefaultConnection": "Server=localhost;Port=3306;database=wajma_niazi;uid=root;pwd=password;"
   }
 }
